[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lora-swap"
version = "0.1.0"
description = "Runtime LoRA hot-swap for diffusion transformers with content-hash registry and LRU."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "torch>=2.5",
    "safetensors>=0.4",
]

[project.optional-dependencies]
server = ["fastapi", "uvicorn", "diffusers>=0.30", "pydantic>=2"]

[tool.setuptools.packages.find]
where = ["src"]
